frontend/test/should_pass/set_004.grg
using set_model_002;

rule removeWrongType {
	a:A;
	
	modify {
		eval {
			a.stringSet = a.stringSet.remove(a.intValue);
		}
	}
}