frontend/test/should_fail/set_008.grg
using set_model_001;

rule removeWrongType {
	a:A;
	
	modify {
		eval {
			a.stringSet = a.stringSet \ { "hallo", a.intValue }; // no implicit cast without the type prefix
		}
	}
}